<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatMat"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_regist_phone"
        style="@style/Edit_NoBg_MW"
        android:layout_height="42dp"
        android:layout_marginTop="@dimen/view_magin_top"
        android:hint="@string/fragment_regist_hint_username" />

    <View style="@style/Line_W" />

    <LinearLayout
        style="@style/MatWra"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_regist_code"
            style="@style/Edit_NoBg_MW"
            android:inputType="number"
            android:layout_weight="1"
            android:hint="@string/fragment_regist_hint_code" />

        <Button
            android:id="@+id/btn_regist_code"
            style="@style/Button_Normal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_small"
            android:text="@string/btn_code" />
    </LinearLayout>

    <View style="@style/Line_W" />

    <EditText
        android:id="@+id/et_regist_nickname"
        style="@style/Edit_NoBg_MW"
        android:hint="@string/fragment_regist_hint_nickname" />

    <View style="@style/Line_W" />

    <EditText
        android:id="@+id/et_regist_password"
        style="@style/Edit_NoBg_MW"
        android:hint="@string/fragment_regist_hint_password" />

    <View style="@style/Line_W" />

    <EditText
        android:id="@+id/et_regist_repassword"
        style="@style/Edit_NoBg_MW"
        android:hint="@string/fragment_regist_hint_repassword" />

    <View style="@style/Line_W" />

    <Button
        android:id="@+id/btn_regist_submit"
        style="@style/Button_Normal"
        android:layout_marginTop="@dimen/view_magin_top"
        android:text="@string/btn_regist" />
</LinearLayout>